# bpf-experiments

./: .env  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
aes/: CMakeLists.txt  Makefile  README.md
aes/include/aes/: aes.h  aes_hw_accel.h
aes/src/: aes.c  aes_benchmark.cpp  aes_hw_accel.c  aes_test.cpp  xdp_aes.c  xdp_loader.cpp
aes/src/bpf/: xdp_aes.c
aes/src/t_tables/: gen_t_tables.py  t_tables.c
aes/src/test/: aes_test.cpp
aes/src/tools/: aes_benchmark.cpp
aes/test/: receiver.py  sender.py  test.py
br/: CMakeLists.txt  README.md
br/benchmark/: Makefile  bandwidth.cpp  notes.txt
br/evaluation/: README.md
br/evaluation/br_config/: config.toml
br/src/: br_loader.cpp  config.cpp  config.hpp  ifindex.cpp  ifindex.hpp  maps.cpp  maps.hpp  scion_addr.cpp  scion_addr.hpp  stats.cpp  stats.hpp
br/src/bpf/: common.h  constants.h  fib_lookup.h  headers.h  load_balancer.c  maps.h  parser.h  path_processing.h  rewrite.h  xdp.c
br/test/: config0.json  config1.json  config2.json  run_tests  run_tests.sh  setup.sh  teardown.sh  test.py
br/test/br_config/: br1.toml  br1_ipv6.toml  br2.toml  br2_ipv6.toml  br3.toml  br3_ipv6.toml
br/test/multi/: setup.bash  teardown.bash
br/test/ptf_tests/: tests.py
br/test/single/: setup.bash  teardown.bash
docs/: dump_jited_bpf_instructions.md
include/bpf/: builtins.h  headers.h  scion.h
include/libbpfpp/: buffer.hpp  error.cpp  fd.hpp  libbpfpp.hpp  map.cpp  map.hpp  program.hpp  util.cpp  util.hpp
int/: Makefile  README.md
int/src/: main.cpp  xdp.c
libbpfpp/: CMakeLists.txt
libbpfpp/include/libbpfpp/: error.hpp  fd.hpp  map.hpp  program.hpp  util.hpp
libbpfpp/src/: error.cpp  map.cpp  util.cpp
libbpfpy/libbpf/: bpf.py  map.py
mac_offload/: CMakeLists.txt  README.md
mac_offload/benchmark/: README.md  gen_packets.py  veth_setup.bash  veth_teardown.bash
mac_offload/python/mac_offload/: bridge_header.py
mac_offload/src/: mac_offload_user.cpp
mac_offload/src/bpf/: common.h  mac_offload.c
mac_offload/tests/: run_tests  veth_setup.bash  veth_teardown.bash
mac_offload/tests/ptf_tests/: tests.py
scion/: README.md  docker-compose-star.yaml  scion
scion/br_config/: br1.toml  br2.toml  br3.toml  br4.toml
xdp_pass/: CMakeLists.txt
